--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <div class="form-group">
             <label for="exampleFormControlInput1"
              style="font-family: 'Poppins', sans-serif">Search Domain Name</label>
-            <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="example.com" style="font-family: 'Rubik', sans-serif;" >
+            <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="example.com" style="font-family: 'Rubik', sans-serif;" autofocus >
           </div>
          </form>
       </div>
